添加定时器

--- a/enter/xzw.html
+++ b/enter/xzw.html
@@ -27,7 +27,7 @@
 	 	<a href="#" class="forget-pwd">忘记密码</a>        
 	</div>        
 	<div class="login">            
-		<button>登录</button>        
+		<button><a href="#">登录</a></button>        
 	</div>        
 	<div class="reg">还没账号?<a href="#">马上注册</a>        
 	</div>    
