--- a/html/head.html
+++ b/html/head.html
@@ -18,7 +18,7 @@
             </div>
             <ul id="menu_list" class="fr">
                 <li><a href="#">注册</a></li>
-                <li><a href="#">登录</a></li>
+                <li><a href="../enter/xzw.html">登录</a></li>
                 <li><a href="#">我的订单</a></li>
                 <li><a href="#">我的关注</a></li>
                 <li><a href="#">资讯</a></li>
