没有尾部的首页 ，放在网站根目录--WWW文件夹下运行！！！

--- a/mi/html/register.html
+++ b/mi/html/register.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./register.css">
+    <link rel="stylesheet" href="../css/register.css">
 </head>
 <body>
     <div class="register">
-        <img src="image/phoneApp.gif" class="App">
+        <img src="../img/phoneApp.gif" class="App">
         <div class="wel-register">
             <div class="logo-register">
-                <a href="https://www.ugoshop.com/" class="logo1"><img src="image/logo1.jpg" target="_blank"></a>
-                <img src="image/welcome.jpg" class="welcome">
+                <a href="https://www.ugoshop.com/" class="logo1"><img src="../img/logo1.jpg" target="_blank"></a>
+                <img src="../img/welcome.jpg" class="welcome">
             </div>
             <p class="already">
                 已经注册，<a href="https://www.ugoshop.com/user.php" target="_blank">现在登录》</a>
