--- a/html/index.html
+++ b/html/index.html
@@ -194,7 +194,7 @@
             <ul class="tv">
                 <li class="fl"><i><img src="../images/red.gif" alt="惠买"></i><strong><b>TV</b>直播</strong>上惠买APP，拼着买更便宜
                 </li>
-                <li class="fr"><a><img src="../images/jmb.jpg" alt="惠买"></a></li>
+                <li class="fr"><a href="#"><img src="../images/jmb.jpg" alt="惠买"></a></li>
             </ul>
             <div class="zhibo">
                 <a href="#">
@@ -247,6 +247,10 @@
             </div>
         </div>
     </div>
+    <iframe src="./sidebar.html" frameborder="0" height="100%" style="position:fixed;top:0;right:0;"></iframe>
 </body>
-
+<script src="../js/jquery.js"></script>
+<script>
+   
+</script>
 </html>
