购物车 详情 轮播

--- a/xq.html
+++ b/xq.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./bootstrap.css">
     <link rel="stylesheet" href="./bootstrap.js">
+    <link rel="stylesheet" href="./glass/glass.html">
     <style>
         * {
             margin: 0;
@@ -113,7 +114,8 @@
                 </tbody>
             </table>
         <h2>商品信息INFORMATION</h2>
-        <img src="./images/img.jpg" class="con-left" >
+       <a href="./glass/glass.html"><img src="./images/img.jpg" class="con-left" ></a>
+        
         <div class="con-right">
             <span>商品信息/INEM INFO</span>
             <ul>
