第一次合并

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -126,9 +126,9 @@
             <a href="#" class="one"><img src="../images/side1.jpg" alt="惠买"></a>
             <div id="pop-up">
                 <a href="#" class="tu"><img src="../images/toux.jpg" alt="惠买"></a>
-                <p>你好！请<a href="#">登录</a>|<a href="#">注册</a></p>
-                <a href="#" class="btn fl">我的订单</a>
-                <a href="#" class="btn fr">优惠券</a>
+                <p>你好！请<a href="./login.html" target="_blank">登录</a>|<a href="./register.html" target="_blank">注册</a></p>
+                <a href="./login.html" class="btn fl" target="_blank">我的订单</a>
+                <a href="./login.html" class="btn fr" target="_blank">优惠券</a>
             </div>
             <a href="#" class="two"><img src="../images/side2.jpg" alt="惠买"></a>
             <div class="pub wdgz"><a href="#">我的关注</a></div>
