加入放大镜

--- a/shopcar/car.html
+++ b/shopcar/car.html
@@ -23,7 +23,7 @@
       
     </tbody>
   </table>
-  总价：&yen <span id="totalPrice"></span> 
+  总价：&yen <span id="totalPrice">￥</span> 
 </body>
 <script src="./car.js"></script>
 <script>
