第二次重大更新

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -13,7 +13,7 @@
         }
 
         #sidebar {
-            z-index: 999;
+            z-index: 99;
             width: 36px;
             position: fixed;
             height: 100%;
@@ -43,7 +43,6 @@
             right: 36px;
             top: 40%;
             display: none;
-            z-index: 999;
         }
 
         #pop-up .tu {
@@ -96,12 +95,12 @@
         }
 
         .wdgz {
-            top: 45%;
+            top: 49%;
             display: none;
         }
 
         .dcwj {
-            bottom: 5%;
+            bottom: 8%;
             display: none;
         }
 
@@ -126,9 +125,9 @@
             <a href="#" class="one"><img src="../images/side1.jpg" alt="惠买"></a>
             <div id="pop-up">
                 <a href="#" class="tu"><img src="../images/toux.jpg" alt="惠买"></a>
-                <p>你好！请<a href="#">登录</a>|<a href="#">注册</a></p>
-                <a href="#" class="btn fl">我的订单</a>
-                <a href="#" class="btn fr">优惠券</a>
+                <p>你好！请<a href="./login.html" target="_blank">登录</a>|<a href="./register.html" target="_blank">注册</a></p>
+                <a href="./login.html" class="btn fl" target="_blank">我的订单</a>
+                <a href="./login.html" class="btn fr" target="_blank">优惠券</a>
             </div>
             <a href="#" class="two"><img src="../images/side2.jpg" alt="惠买"></a>
             <div class="pub wdgz"><a href="#">我的关注</a></div>
@@ -139,7 +138,7 @@
                 <a href="#"><img src="../images/code.jpg" alt="惠买"></a>
             </div>
             <a href="#" class="four"><img src="../images/side4.jpg" alt="惠买"></a>
-            <div class="pub dcwj"><a href="#">调查问卷</a></div>
+            <div class="pub dcwj"><a href="https://www.ugoshop.com/dc.php?id=1&tp=HomePage.1" target="_blank">调查问卷</a></div>
             <a href="#" class="five"><img src="../images/side5.jpg" alt="惠买"></a>
             <div class="pub fhdb"><a href="#">返回顶部</a></div>
         </div>
