--- a/html/setinteval.html
+++ b/html/setinteval.html
@@ -5,7 +5,7 @@
 	<title>倒计时</title>
 	<style type="text/css">
 		.time {
-			width:300px;
+			width:200px;
 			height:80px;
 			margin:0 auto;
 		}
@@ -14,6 +14,7 @@
 			border-radius:5px;
 			color:#FFFFFF;
 			font-weight:bold;
+			opacity: 0.6;
 		}
 	</style>
 </head>
