--- a/xq.html
+++ b/xq.html
@@ -136,15 +136,15 @@
             color: black;
         }
 
-        .other-goods span {
-            display: inline-block;
-            width: 245px;
-            text-align: left;
-            color: red;
+        .other-goods ul{
+            float: left;
         }
 
         .other-goods {
             border: 1px solid #cccccc;
+        }
+        .other-goods span{
+            color: red;
         }
     </style>
 </head>
@@ -340,21 +340,30 @@
     </div>
     <div class="other-goods">
         <h4>看看其他同类商品</h4>
-        <img src="./images/img2.jpg" alt="">
+            <ul>
+                <li><img src="./images/img2.jpg" alt=""></li>
+                <li><a href="#">丁摩 简约休闲百搭纯色衬衣</a></li>
+                <li><span>￥249</span></li>
+            </ul>
+            <ul>
+                <li><img src="./images/img3.jpg" alt=""></li>
+                <li> <a href="#">丁摩 简约休闲百搭纯色衬衣</a></li>
+                <li><span>￥249</span></li>
+            </ul>
+            <ul>
+                <li><img src="./images/img4.jpg" alt=""></li>
+                <li> <a href="#">丁摩 简约休闲百搭纯色衬衣</a></li>
+                <li><span>￥249</span></li>
+            </ul>
+            <ul>
+                <li><img src="./images/img1.jpg" alt=""></li>
+                <li> <a href="#">丁摩 简约休闲百搭纯色衬衣</a></li>
+                <li><span>￥249</span></li>
+            </ul>
 
-        <img src="./images/img3.jpg" alt="">
 
-        <img src="./images/img4.jpg" alt="">
-
-        <img src="./images/img1.jpg" alt="">
-        <a href="#">丁摩 简约休闲百搭纯色衬衣</a>
-        <a href="#">丁摩 简约休闲百搭纯色衬衣</a>
-        <a href="#">丁摩 简约休闲百搭纯色衬衣</a>
-        <a href="#">丁摩 简约休闲百搭纯色衬衣</a>
-        <span>￥249</span>
-        <span>￥249</span>
-        <span>￥249</span>
-        <span>￥249</span>
+        </div>
+      
     </div>
 </body>
 
