添加了购物车和注册bug

--- a/html/goodslist.html
+++ b/html/goodslist.html
@@ -45,7 +45,7 @@
       </tr>
     </tbody>
   </table>
-  <a href='./car.html'><button class="btn btn-danger">查看购物车</button></a>
+  <a href="./car.html"><button class="btn btn-danger">查看购物车</button></a>
 </body>
 <script src="../js/car.js"></script>
 <script>
