--- a/html/car.html
+++ b/html/car.html
@@ -12,7 +12,7 @@
   <table class="table table-bordered table-hover">
     <thead>
       <tr>
-        <th>序号</th>
+        <th>图片</th>
         <th>商品名称</th>
         <th>商品价格</th>
         <th>商品数量</th>
@@ -33,7 +33,7 @@
   var str = ``; //用于后续的tr拼接
   for(var i=0; i<cartlist.length; i++){
     str += `<tr>
-        <td>${cartlist[i].id}</td>
+        <td><img src="${cartlist[i].imgsrc}" alt="惠买" style="width:100px;"></td>
         <td>${cartlist[i].title}</td>
         <td>${cartlist[i].price}</td>
         <td>${cartlist[i].number}</td>
