--- a/html/login.html
+++ b/html/login.html
@@ -45,19 +45,15 @@
 		var username = document.getElementById("username").value;
 		var pwd = document.getElementById("pwd").value;
 
-		//遍历json数据
-		$.getJSON("./login.json",function(data){
-			var len = data.length;
-			for(var i = 0; i < len; i++){
-				//用户名存在且对应密码相等则返回首页
-				if(data[i].username == username && data[i].pwd == pwd){
-					location.href = "./index.html";
-					return;
-				}
+		//传 用户名和密码---连接数据库---查询验证有效与否
+		$.post("./login_valid.php", { name: username, password: pwd },
+		function(data){
+			if(data == "succ"){
+				location.href = "./index.html?user="+username;
+			}else{
+				alert("登录信息错误");
 			}
-			//否则提示信息错误
-			alert("用户名或密码错误");
-		});
-			
+		});		
 	}
+
 </script>
