--- a/html/login.html
+++ b/html/login.html
@@ -31,7 +31,7 @@
 			<div class="login">            
 				<button>登录</button>
 			</div>        
-			<div class="reg">还没账号?<a href="#">马上注册</a></div>        
+			<div class="reg">还没账号?<a href="./register.html">马上注册</a></div>        
 		</div>   
 	</div>
 </body>
